Relatively good spell-check, and .gitignore some unneeded files

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
   dpi = 320,
   cache = TRUE,
   out.width = "95%",
-  fig.align = 'center'
+  fig.align = 'centre'
 )
 ```
 
@@ -80,7 +80,7 @@ However, producing suitable estimates of relevant indicators is challenging.
 
 The data I use were recorded from national household surveys or routinely collected from healthcare facilities providing HIV services.
 An important feature of these data are the location and time at which each observation was recorded
-While diverse, spatio-temporal data have distinctive reoccuring commonalities across application settings.
+While diverse, spatio-temporal data have distinctive recurring commonalities across application settings.
 As a result, the work in this thesis both makes use of, and aspires to contribute to, modelling techniques from spatio-temporal statistics.
 
 Computation is an essential part of modern statistical practice.
