--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
   dpi = 320,
   cache = TRUE,
   out.width = "95%",
-  fig.align = 'center'
+  fig.align = 'centre'
 )
 ```
 
@@ -85,7 +85,7 @@ knitr::include_graphics("figures/hiv-aids/overall-picture.png")
 Implementation of HIV prevention and treatment has significantly reduced the number of new HIV infections and AIDS-related deaths per year since their peak (Figure \@ref(fig:overall-picture)).
 The most significant evidence-based interventions, in chronological order, are described below:
 
-* Condoms are an inexpensive and effective method for prevention of HIV and other sexually transmitted infections (STIs) such as *Chlamydia trachomatis*, *Neisseria gonorroeae*, syphilis, and *Trichomonas vaginalis*.
+* Condoms are an inexpensive and effective method for prevention of HIV and other sexually transmitted infections (STIs) such as *Chlamydia trachomatis*, *Neisseria gonorrhoeae*, syphilis, and *Trichomonas vaginalis*.
 Condom usage has increased significantly since 1990, which is estimated to have averted `r custom_numbers_to_words(condom_infections_averted)` new HIV infections [@stover2021impact].
 That said, there remain significant and difficult to close gaps in condom usage.
 * Antiretroviral therapy (ART) is a combination of drugs which stop the virus from replicating in the body.
