--- a/05-multi-agyw.Rmd
+++ b/05-multi-agyw.Rmd
@@ -478,7 +478,7 @@ Inclusion of Besag spatial random effects, rather than IID, consistently improve
 Benefits from inclusion of covariates were more marginal.
 As some countries had no suitable surveys, I nonetheless preferred to include covariate information so that estimates in these countries would be based on some country-specific data.
 
-(ref:fsw-logit-model-comparison) For the logistic regression model, the CPO, DIC, and WAIC each agreed that the model containing Besag spatial random effects and the `csfwrecent` covariates was best. Inclusion of Besag spatial random effects consistently improved each criterion, whereas improvements from inclusion of any covariates were marginal.
+(ref:fsw-logit-model-comparison) For the logistic regression model, the CPO, DIC, and WAIC each agreed that the model containing Besag spatial random effects and the `cfswrecent` covariates was best. Inclusion of Besag spatial random effects consistently improved each criterion, whereas improvements from inclusion of any covariates were marginal.
 
 ```{r fsw-logit-model-comparison, fig.cap="(ref:fsw-logit-model-comparison)"}
 knitr::include_graphics(paste0("resources/multi-agyw/", resource_version, "/depends/fsw-logit-model-comparison.png"))
@@ -597,7 +597,7 @@ majority_claim_moz <- df_3p1_national %>%
   mutate(estimate_smoothed = 100 * estimate_smoothed) %>%
   filter(estimate_smoothed < 50)
  
-#' What proportion of 20-29 year-olds are cohabiting versus with nonregular partner(s),
+#' What proportion of 20-29 year-olds are cohabiting versus with non-regular partner(s),
 #' above and below the south / east dividing border (UN geoscheme)?
 dividing_border <- df_3p1_subnational %>%
   mutate(
@@ -747,7 +747,7 @@ such that
 \end{equation}
 These values are given by
 \begin{equation}
-\hat \theta_{ia} = \text{argmin}_{\theta_{ia} \in [-10, 10]} f(\theta_{ia})^2.
+\hat \theta_{ia} = \arg\min_{\theta_{ia} \in [-10, 10]} f(\theta_{ia})^2.
 \end{equation}
 The number of PLHIV were obtained by $H_{iak} = \rho_{iak} N_{iak}$, where $N_{iak}$ is the risk group population size.
 
@@ -937,10 +937,10 @@ This consideration may motivate selecting risk groups based on easily observable
 
 In conducting this work, there was insufficient engagement with country experts or civil society organisations.
 As a result, in early use of the risk group tool the FSW population size estimates were met with some disagreement in Malawi.
-In that instance, the cause of the disagreement was extenal model inputs used.
+In that instance, the cause of the disagreement was external model inputs used.
 In future, estimates should be generated and reviewed by country teams.
 
-<!-- RE notes that it could be worth talking about the age patterns of sexual mixing, that I didn't consider them, and how they might effect intervention planning. -->
+<!-- RE notes that it could be worth talking about the age patterns of sexual mixing, that I did not consider them, and how they might effect intervention planning. -->
 
 ### Conclusion
 
