--- a/front-and-back-matter/abbreviations.tex
+++ b/front-and-back-matter/abbreviations.tex
@@ -14,7 +14,7 @@
 \item[HIV] Human Immunodeficiency Virus.
 \item[AIDS] Acquired ImmunoDeficiency Syndrome.
 \item[PEPFAR] President’s Emergency Plan for AIDS Relief.
-\item[the Global Fund] the Global Fund to Fight AIDS, Tuberculosis, and Malaria.
+\item[Global Fund] Global Fund to Fight AIDS, Tuberculosis, and Malaria.
 \item[HIV] Demographic and Health Surveys.
 \item[AIS] AIDS Indicator Survey.
 \item[PrEP] Pre-Exposure Prophylaxis.
@@ -39,7 +39,7 @@
 \item[SAE] Small-Area Estimation.
 \item[GMRF] Gaussian Markov Random Field.
 \item[HMC] Hamiltonian Monte Carlo.
-\item[GMRF] Gaussian Markov Random Field.
+\item[GMRF] Gauss-Markov Random Field.
 \item[HMC] Hamiltonian Monte Carlo.
 \item[LGM] Latent Gaussian Model.
 \item[ELGM] Extended Latent Gaussian Model.
@@ -49,5 +49,7 @@
 \item[ESS] Effective Sample Size.
 \item[IID] Independent and Identically Distributed.
 \item[PPL] Probabilistic Programming Language.
+\item[CCD] Central Composite Design.
+\item[EB] Empirical Bayes.
 
 \end{mclistof} 
