--- a/front-and-back-matter/notations.tex
+++ b/front-and-back-matter/notations.tex
@@ -1,5 +1,9 @@
 \begin{mclistof}{List of Notations}{3.2cm}
 
+\item[$\propto$] Proportional to.
+\item[$\mathbb{R}$] The set of real numbers.
+\item[$\mathbb{Z}$] The set of integers.
+\item[$\mathbb{Z}^+$] The set of positive integers.
 \item[$\rho$] HIV prevalence.
 \item[$\lambda$] HIV incidence.
 \item[$\alpha$] ART coverage.
