--- a/references.bib
+++ b/references.bib
@@ -1833,4 +1833,12 @@ doi = {10.1201/9781420072884-c30}
   publisher={Taylor \& Francis}
 }
 
+@incollection{box1992experimental,
+  title={On the experimental attainment of optimum conditions},
+  author={Box, George EP and Wilson, Kenneth B},
+  booktitle={Breakthroughs in statistics: methodology and distribution},
+  pages={270--310},
+  year={1992},
+  publisher={Springer}
+}
 
